<resources>
    <string name="app_name">Iota Chat</string>
    <string name="log_out">Log Out</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="welcome_to_iota_chat">Welcome to Iota Chat</string>
    <string name="log_in">Log In</string>
    <string name="display_name">Display Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hi_there_i_m_using_iota_chat">Hi there, I\'m using Iota chat!</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">Change Status</string>
    <string name="change_display_name">Change Display Name</string>
    <string name="status">Status</string>
    <string name="add">Add</string>
    <string name="friend_requests">Friend Requests:</string>
    <string name="refresh">refresh</string>
    <string name="friends">Friends</string>
    <string name="hello">Hello...</string>
    <string name="send">send</string>
    <string name="enter_your_email_below_and_we_will_send_you_an_email_to_reset_your_password">Enter your email below and we will send you an email to reset your password:</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>
